--- a/src/pages/add-place/add-place.html
+++ b/src/pages/add-place/add-place.html
@@ -93,7 +93,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <img [src]="">
+          <img [src]="imageUrl">
         </ion-col>
       </ion-row>
       <ion-row>
